bin_PROGRAMS = dmltest3

noinst_HEADERS = 	notetrk.h	\
			pnotetrk.h	\
			recstor.h	\
			dmlcore.h	\
			common.h	\
			item.h		\
			elem.h		\
			chain.h		\
			list.h		\
			list_r2e.h	\
			_cppdefs.h	\
			_gcdefs.h	\
			ref.h

dmltest3_SOURCES = 	notetrk.cpp	\
			pnotetrk.cpp	\
			dmltest3.cpp	\
			recstor.cpp	\
			dmlcore.cpp	\
			list_r2e.cpp	\
			list.cpp	\
			elem.cpp	\
			ref.cpp		\
			item.cpp	\
			chain.cpp

