bin_PROGRAMS = dml_imagine

noinst_HEADERS = 	notetrk.h	\
			pnotetrk.h	\
			_cppdefs.h	\
			_gcdefs.h	\
			generichelper.h \
			globaltimer.h \
			genericinput.h \
			timedinput.h \
			timedmouse.h \
			timedkeys.h   \
			input.h \
			buffer.h \
			actionsinput.h \
			actions.h \
			consts.h \
			camera.h \
			excamera.h \
			fps.h \
			init.h \
			square.h \
			combifile.h \
			activefunx.h \
			flags.h \
			SLL.h \
			actionsreplay.h \
			macros.h

dml_imagine_SOURCES = 	notetrk.cpp	\
			pnotetrk.cpp	\
			globaltimer.cpp \
			timedinput.cpp  \
			timedmouse.cpp \
			timedkeys.cpp \
			input.cpp \
			genericinput.cpp \
			actionsinput.cpp \
			actions.cpp \
			init.cpp \
			main.cpp	\
			camera.cpp \
			excamera.cpp \
			fps.cpp \
			square.cpp \
			combifile.cpp \
			flags.cpp \
			activefunx.cpp \
			actionsreplay.cpp

dml_imagine_LDFLAGS = `allegro-config --libs`
dml_imagine_CXXFLAGS = `allegro-config --cppflags` -pipe -Wall -Werror



